# website

./: .gitignore  .profile  .travis.yml  Cargo.toml  LICENSE  default.nix  shell.nix  website.nix
src/: hosts.rs  main.rs
src/fuzen_cafe/: data.rs  mod.rs  users.rs
src/fuzen_info/: fractal.rs  fun.rs  mod.rs  randomword.rs  totp.rs
src/fuzen_info/discord/: mod.rs
src/fuzen_info/help/: baka.help  baka.rs  fractal.help  fractal.rs  hello.help  hello.rs  help.help  help_menu.rs  mod.rs  randomword.help  randomword.rs  totp.help  totp.rs
src/statics/: mod.rs  style.css
src/statics/images/: mod.rs
src/statics/templates/: base.tera  content.tera  demos.tera  index.tera  login.tera  mod.rs  profile.tera  projects.tera
src/statics/wordgame/: index.html  main.css  main.js  mod.rs
