[package]
name = "website"
version = "0.1.0"
authors = ["Fuzen <fuzen@protonmail.com>"]
# edition = "2018"

[dependencies]
actix-web = "0.7.16"
failure = "0.1.3"
boringauth = "0.7.0"
serde_derive = "1.0.82"
serde = "1.0.82"
futures = "0.1.25"
rayon = "1.0.3"
rand = "0.6.1"
num = "0.2.0"
image = "0.20.1"
tera = "0.11.20"
lazy_static = "1.2.0"
pretty_env_logger = "0.3.0"
chrono = { version = "0.4.6", features = ["serde"] }
