[package]
name = "website"
version = "0.1.0"
authors = ["Fuzen <fuzen@protonmail.com>"]
# edition = "2018"

[dependencies]
actix-web = "0.7.18"
failure = "0.1.5"
boringauth = "0.7.0"
serde_derive = "1.0.84"
serde = "1.0.84"
futures = "0.1.25"
rayon = "1.0.3"
rand = "0.6.4"
num = "0.2.0"
image = "0.21.0"
tera = "0.11.20"
lazy_static = "1.2.0"
pretty_env_logger = "0.3.0"
chrono = { version = "0.4.6", features = ["serde"] }
reqwest = "0.9.8"
time = "0.1.42"
log = "0.4.6"
