[package]
name = "website"
version = "0.1.0"
authors = ["Fuzen <fuzen@protonmail.com>"]
edition = "2018"
publish=false

[dependencies]
actix-web = "1.0.2"
failure = "0.1.5"
boringauth = "0.8.0"

serde = { version = "1.0.92", features = ["derive"] }
rayon = "1.1.0"
rand = "0.6.5"
num = "0.2.0"
image = "0.21.2"
tera = "0.11.20"
lazy_static = "1.3.0"
pretty_env_logger = "0.3.0"
chrono = { version = "0.4.6", features = ["serde"] }
reqwest = "0.9.18"
time = "0.1.42"
log = "0.4.6"
actix-identity = "0.1.0"
actix-cors = "0.1.0"
url = "1.7.2"
actix = "0.8.3"
serde_json = "1.0.39"

[profile.release]
opt-level = 3
debug = false
panic = 'unwind'
#incremental = false
overflow-checks = true
codegen-units = 1
debug-assertions = false
